@@ -1,6 +1,9 @@
 b973540d8e6c83e8b218bcd0f4c58ffe net.rieter.xot.channel.streams.radio538/radio538fanart.jpg
 d823ecb91e8a3a5e6cb10f8939eb27ea net.rieter.xot.channel.streams.radionl/radionlfanart.jpg
 9ae55bdbc50ce561934165dbd90946ee net.rieter.xot.channel.streams.tvnl/tvnlfanart.jpg
+7f37cbec71ec71744fd1dc230831432b net.rieter.xot.channel.streams.24classic/24classicfanart.png
+a15adc41b4cbb357cc63205aa37c6917 net.rieter.xot.channel.streams.24classic/24classicsicon.png
+0bb70d8c5227163d2bbbec2a3f9c78cf net.rieter.xot.channel.streams.24classic/24classicsimage.png
 9d14902c01864ed13c011815d226aebf net.rieter.xot.channel.streams.radio538/radio538image.png
 0c5bbce1f01eee86c4d0bb1ba698a559 net.rieter.xot.channel.streams.radio538/radio538large.png
 d99096df70172cf5af9c8dc0a50bd599 net.rieter.xot.channel.streams.radionl/radionlimage.png
