@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: Radio 538, Slam! FM and Q-Music streams broken (Fixes #665, Fixes #666, Fixes #667)
+Added: 24Classics.com (Fixes #714)
 
 [I]Previous changes[/I]
+Fixed: Radio 538, Slam! FM and Q-Music streams broken (Fixes #665, Fixes #666, Fixes #667)
 Added: SLAM! TV stream (Fixes #650)
 Fixed: Radio 538 had some data items appear as folders
 Fixed: Radio 538 Live streams (Fixes #604)
